fix select list option alignment

--- a/src/index.css
+++ b/src/index.css
@@ -104,6 +104,10 @@ button.signin {
   text-align: center;
 }
 
+.align-left {
+  text-align: left;
+}
+
 .right {
   width: 100px;
   /* TODO: figure out nav right spacing */
